# pixelart-api

./: .gitignore  docker-compose.yml  pyproject.toml
docs/: endpoints.md  error_handling.md  migration_plan.md
src/: ai.py  app.py  convert.py  exceptions.py  filters.py  run.py
src/utils/: images.py
